# agentydragon.github.io

./: .gitignore  .gitmodules  CNAME  Model_of_continuous_asset_growth.ipynb  README.md  TODO.md  about.html  about.markdown  archive.html  atom.xml  continuous_asset_growth.ipynb  homepage.cabal  homepage.cabal.cabal  index.html  rss.xml  site.hs  stack.yaml
_site/: about.html  archive.html  atom.xml  index.html  rss.xml
cobalt-rewrite/: README.md  _cobalt.yml
css/: default.css  syntax.css
design/: favicon-hmm.xcf  favicon.xcf
rust-rewrite/: Cargo.toml  README.md  WORKSPACE
rust-rewrite/agentydragon/: config.toml
rust-rewrite/agentydragon/content/blog/: 2015-03-28-reproducing-travis-ci-builds.md  2015-06-15-tethering.md  2016-01-10-stock-correlation-calculator.md  2016-06-18-recent-icky-personal-stuff.md  2018-03-21-triage.md  2021-10-18-rai-ml-mistakes-3.md  _index.md  first.md
rust-rewrite/agentydragon/content/posts/: 2015-08-24-tricks-of-the-trade.md  2015-12-29-2015.md  2016-04-07-ea-pledge-for-2017.md  2016-06-18-recent-icky-personal-stuff.md  2016-07-14-summer.md  2016-09-19-trip-to-chernobyl.md  2016-10-05-knowledge-base-completion.md  2018-03-15-against-goals.md  2018-12-09-groundhog-life.md  2019-09-02-continuous-asset-growth.md  2020-02-21-you-are-an-optimizer.md  2020-04-28-growth-mindset-for-better-sex.md  2020-12-31-cartpole-q-learning.md  2021-01-04-rai-ml-mistakes-2.md  2021-10-18-rai-ml-mistakes-3.md
rust-rewrite/agentydragon/public/: default.css  search_index.en.js  syntax.css
rust-rewrite/agentydragon/sass/: default.scss
(+163 files in other folders)
