[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[[bin]]
name = "fake_bin"
path = "fake_bin.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
zola = { git = "https://github.com/getzola/zola" } #, rev="7f4060b82a6cdb497363392c5a8be17c9f1007ba" }


[package.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//cargo"

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
package_aliases_dir = "."

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"

#[package.metadata.raze.crates.zola.'0.16.1']
#gen_buildrs = true # needed to build bindgen
#extra_aliased_targets = [
#	"cargo_bin_zola"
##    #"cargo_bin_bindgen"
#]
